--- a/modules/grid/_row.scss
+++ b/modules/grid/_row.scss
@@ -1,4 +1,7 @@
+@import 'grid-margin';
+
 .row {
 	display   : flex;
 	flex-flow : row wrap;
+	@include grid-margin;
 }
