--- a/modules/img/_img-responsive.scss
+++ b/modules/img/_img-responsive.scss
@@ -1,4 +1,4 @@
-.img-fluid {
+.img-responsive {
 	width: 100%;
 	height: auto;
 }
