--- a/tests/step_1/test_style.css
+++ b/tests/step_1/test_style.css
@@ -1,7 +1,6 @@
 body * {
 	border: 1px solid;
 	min-height: 10px;
-	margin: 3px;
 }
 [class*='container'] {
 	border-color: white;
